--- a/pages/photo/css/style1.css
+++ b/pages/photo/css/style1.css
@@ -87,7 +87,7 @@ body{ background-color:#FFFFFF}
 	transition-timing-function: ease-out;
 	-webkit-transform: scale3d(0, 0, 1);
 	transform: scale3d(0, 0, 1);
-	fill: #1f1d1d;
+	fill: #ffffff;
 	fill-opacity: 0;
 }
 
