--- a/files/oneindex/material.css
+++ b/files/oneindex/material.css
@@ -13,7 +13,7 @@ nav {
   justify-content:center;
   align-items:center;
   width:100%;
-  height:2rem;
+  height:3rem;
   background: #ffffff;
   color:#000000;
   font-size:1.4rem;
@@ -50,14 +50,14 @@ a.item i {
   margin-right:0.5rem;
 }
 a.item:hover {
-  background: #ffe7d1;
+  background: #f2f2f2;
 }
 footer {
   font-size: 0.8rem;
-  color: #ffffff;
+  color: #7d7d7d;
 }
 footer a {
-  color: #ffffff; 
+  color: #7d7d7d; 
 }
 
 .readme {
