--- a/files/oneindex/material.css
+++ b/files/oneindex/material.css
@@ -50,7 +50,7 @@ a.item i {
   margin-right:0.5rem;
 }
 a.item:hover {
-  background: #f2f2f2;
+  background: #9e9e9e;
 }
 footer {
   font-size: 0.8rem;
