--- a/files/oneindex/material.css
+++ b/files/oneindex/material.css
@@ -42,7 +42,7 @@ a.item {
   display: flex;
   align-items:center;
   text-decoration: none; 
-  color: #ffffff;
+  color: #2b2b2b;
   padding: 0.8rem 1rem;
   transition: .5s hover linear;	
 }
