--- a/files/oneindex/material.css
+++ b/files/oneindex/material.css
@@ -14,7 +14,7 @@ nav {
   align-items:center;
   width:100%;
   height:3rem;
-  background: #90b096;
+  background: #ffffff;
   color:#000000;
   font-size:1.4rem;
   box-shadow: 0 5px 10px 0 rgba(0,64,128,.25);
